# deeper-bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/deeper_bot/: __init__.py  __main__.py  agent.py  bot.py  compaction.py  config.py  converter.py  llm.py  prompts.py  recovery.py  security.py  session.py  telegram.py  tools.py
src/deeper_bot/tools/: __init__.py  documents.py  executor.py  http.py  markdown.py  schemas.py
tests/: conftest.py  helpers.py  test_agent.py  test_bot.py  test_compaction.py  test_config.py  test_converter.py  test_llm.py  test_recovery.py  test_security.py  test_session.py  test_telegram.py  test_tools.py
