[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeper-bot"
version = "0.1.0"
description = "Telegram bot for deep research using Tree of Thoughts methodology"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.27,<4",
    "litellm>=1.83,<2",
    "ddgs>=9.14,<10",
    "httpx>=0.28,<1",
    "trafilatura>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "aiosqlite>=0.21,<1",
    "mistune>=3.0,<4",
    "markitdown[pdf,docx,xlsx,pptx]>=0.1,<1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/deeper_bot"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "D", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/deeper_bot/prompts.py" = ["E501"]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
